--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
     "name": "spring",
     "version": "1.0.0",
     "description": "A spring simulation.",
-    "main": "spring.js",
+    "main": "dist/spring.js",
     "scripts": {
-        "build": "webpack ./test.js bundle.js"
+        "start": "webpack-dev-server --open",
+        "build": "./node_modules/.bin/webpack"
     },
     "author": "Sam Olaogun",
     "license": "MIT",
     "devDependencies": {
-        "webpack": "^2.6.0"
+        "babel-core": "^6.24.1",
+        "babel-loader": "^7.0.0",
+        "babel-preset-es2015": "^6.24.1",
+        "gulp": "^3.9.1",
+        "uglifyjs-webpack-plugin": "^0.4.3",
+        "webpack": "^2.6.0",
+        "webpack-dev-server": "^2.4.5"
     }
 }
